# icmi2025

./: .pylintrc  README.md  data_analysis.ipynb  environment.yml  pyproject.toml
data/: d1_human_non_structured_descriptions.csv  d2_llm_structured_descriptions.csv  d3_llm_non_structured_descriptions.csv
data/descriptions/: d0_human_structured_descriptions.csv  d4_openai_poses_descriptions.csv  d5_llm_landmarks_descriptions.csv  d6_openai_combined_descriptions.csv
data/predictions/: d0_human_structured_predictions.csv  d1_human_non_structured_predictions.csv  d2_openai_structured_predictions.csv  d3_openai_non_structured_predictions.csv  d4_openai_poses_predictions.csv  d5_openai_landmarks_predictions.csv  d6_openai_combined_predictions.csv
dataset/: elicit_cam.csv  elicit_cam_ns.csv  ground_truth_commands.csv
dataset/images/: README.md
outputs/: accuracy_chi_square_results.csv  accuracy_pairwise_results.csv  accuracy_pairwise_summary.csv  accuracy_results.csv  similarity_anova_results.csv  similarity_results_stats.csv  similarity_tukey_hsd_results.csv
pgf/: hand_gesture_accuracy_bar_plot.pgf  semantic_similarity_box_plot.pgf  semantic_similarity_scatter_plot.pgf
src/: s0_human_structured_descriptions.py  s1_human_non_structured_descriptions.py  s2_llm_structured_descriptions.py  s2_openai_structured_descriptions.py  s3_llm_non_structured_descriptions.py  s3_openai_non_structured_descriptions.py  s4_llm_json_descriptions.py  s4_openai_json_descriptions.py  s5_annotation_data_cleaning.py  s5_generate_command_predictions.py
(+9234 files in other folders)
